* Improved the internal solver to handle much larger problems (#1358)
* Use Unix.lockf for more reliable repository locks (#1299)
* Large performance improvements (#1363)
* Upgraded external dependencies to dose 3.2.2, ocamlgraph 1.8.5, cmdliner
  0.9.4, cudf 0.7
* Switch export file now include pinning data. Pinned package restored through
  'opam switch import' (#1393)
* Meaningful messages explaining conflicts and why packages aren't available
  (#1238, #1419, #1398)
* More informative 'opam config list', more complete 'opam config var'
* Added 'opam config cudf-universe' for use in external tools
* opam files: added a 'dev-repo' field, and the experimental 'flags' field
  (#1217, #1472)
* Generate an opam-admin.top to easily apply scripts on a package repository
  (#1454)
* Added 'opam upgrade --fixup' to save the day if your installed package set
  gets inconsistent.
* Fixed some return codes
* Hundreds of smaller fixes and UI improvements

1.1.2
* Rewritten, more compatible build system based on Makefiles (#1362, #1424)

1.1.1
* Fix `opam-admin make <packages> -r` (#990)
* Explicitly prettyprint list of lists, to fix `opam-admin depexts` (#997)
* Tell the user which fields is invalid in a configuration file (#1016)
* Add `OpamSolver.empty_universe` for flexible universe instantiation (#1033)
* Add `OpamFormula.eval_relop` and `OpamFormula.check_relop` (#1042)
* Change `OpamCompiler.compare` to match `Pervasives.compare` (#1042)
* Add `OpamCompiler.eval_relop` (#1042)
* Add `OpamPackage.Name.compare` (#1046)
* Add types `version_constraint` and `version_formula` to `OpamFormula` (#1046)
* Clearer command aliases. Made `info` an alias for `show` and added the alias `uninstall` (#944)
* Fixed `opam init --root=<relative path>` (#1047)
* Display OS constraints in `opam info` (#1052)
* Add a new 'opam-installer' script to make `.install` files usable outside of opam (#1026)
* Add a `--resolve` option to `opam-admin make` that builds just the archives you need