@@ -40,7 +40,10 @@ module API: sig
     unit
 
   (** Display a general summary of a collection of packages. *)
-  val info: fields:string list -> raw_opam:bool -> string list -> unit
+  val info: fields:string list -> raw_opam:bool -> atom list -> unit
+
+  (** Display dependencies or external dependencies of packages. *)
+  val depends:  ?depends:bool -> ?depexts:string list -> atom list -> unit
 
   (** Install the given list of packages. Second argument, if not None, specifies
       that given packages should be added or removed from the roots.
